# alembic-environment

./: LICENSE  README.md  alembic.ini  copier.yml  example.sql  pyproject.toml  sqlast.py  zensical.toml  {{ _copier_conf.answers_file }}.jinja
.github/workflows/: alembic-cicd.yml  alembic-migrations.yml  dependabot.yml  format.yml  release.yml
database/environments/: pyproject.toml
database/migrations/: pyproject.toml
database/migrations/src/migrations/: __init__.py  script.py.mako
database/migrations/src/migrations/_cli/: app.py
database/migrations/src/migrations/_cli/seeding/: main.py
database/migrations/src/migrations/seeds/: my_seed.py
database/migrations/src/migrations/versions/: 20260609_546a0bb854f0_initial.py
database/migrations/tests/: conftest.py  test_migrations.py  test_seeds.py
database/models/src/models/: __main__.py
database/models/src/models/_cli/: app.py
database/models/src/models/_cli/sql/: __init__.py  main.py
docs/: index.md  model_generation.md  quickstart.md
migrations/: env.py  pyproject.toml  utils.py
migrations/src/migrations/: __init__.py  env.py  utils.py
migrations/src/migrations/_cli/: __init__.py  app.py
migrations/src/migrations/_cli/seeding/: __init__.py  main.py
migrations/src/migrations/cli/: app.py
migrations/src/migrations/seeding/: __init__.py  main.py
migrations/src/migrations/seeds/: my_seed.py
migrations/src/migrations/versions/: 20260602_5b422c6de02d_initial.py  20260609_546a0bb854f0_initial.py  20260609_74412bbb5201_auto.py  20260609_e2c6363ccfac_auto.py
migrations/tests/: conftest.py  test_migrations.py  test_seeds.py
models/: my_model.py  pyproject.toml
models/sql/: users.sql
models/src/models/: __init__.py  __main__.py  my_model.py
models/src/models/_cli/: app.py
models/src/models/_cli/sql/: __init__.py  main.py  reverse.py
models/src/models/cli/: __init__.py  app.py
models/src/models/cli/sql/: __init__.py  main.py
models/src/models/cli/templates/: __init__.py  main.py
models/src/models/templates/: __init__.py  main.py
models/src/models/users/: __init__.py  base.py  model.py  typeddict.py  validator.py
models/templates/: default.py.jinja
models/tests/: test_reverse.py
src/alembic_environment/: __main__.py  main.py
tests/: conftest.py  smoke_test.py  test_main.py
