[project]
name = "alembic-environment"
version = "0.1.6"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "copier>=9.15.1",
    "sqlglot>=30.12.0",
    "sqlparse>=0.5.5",
    "tomlkit>=0.15.0",
    "typer>=0.26.6",
]

[project.urls]
Homepage = "https://phazebreak-coatings-inc.github.io/alembic-environment"
Documentation = "https://phazebreak-coatings-inc.github.io/alembic-environment/"
Repository = "https://github.com/Phazebreak-Coatings-Inc/alembic-environment"

[project.scripts]
alembic-environment = "alembic_environment.__main__:main"

[build-system]
requires = ["uv_build>=0.11.18,<0.12"]
build-backend = "uv_build"

[tool.uv.workspace]
members = ["database/models", "database/migrations", "database/environments"]

[tool.uv.sources]
models = { workspace = true }
migrations = { workspace = true }

[dependency-groups]
dev = [
    "debugpy>=1.8.21",
    "alembic>=1.18.4",
    "sqlalchemy>=2.0.50",
    "sqlmodel>=0.0.38",
    "models",
    "migrations",
    "pytest-alembic>=0.12.1",
    "pytest>=9.0.3",
    "pydantic-settings>=2.14.1",
    "psycopg[binary]>=3.3.4",
    "ruff>=0.15.15",
    "tomlkit>=0.15.0",
    "sqlacodegen>=4.0.3",
    "inflection>=0.5.1",
    "models",
    "migrations"
]

docs = [
    "zensical>=0.0.43"
]
