[project]
name = "models"
version = "0.1.0"
description = "Application data models, sharing a single MetaData for Alembic autogenerate."
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy>=2.0.50",
    "sqlmodel>=0.0.38",
]

[build-system]
requires = ["uv_build>=0.11.18,<0.12"]
build-backend = "uv_build"
