[project]
name = "migrations"
version = "0.1.0"
description = "Alembic migration environment for the workspace."
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "sqlalchemy>=2.0.50",
    "models",
    "pytest-alembic>=0.12.1",
    "pytest>=9.0.3",
    "pydantic-settings>=2.14.1",
    "typer>=0.26.6",
]

[tool.uv.sources]
models = { workspace = true }

[build-system]
requires = ["uv_build>=0.11.18,<0.12"]
build-backend = "uv_build"
